--- a/index.html
+++ b/index.html
@@ -507,3 +507,69 @@
 <footer class="app-footer" id="copyrightFooter">Copyright © I.B</footer>
 </body>
 </html>
+
+<script>
+(() => {
+  const ENDPOINT = "/api/track"; // stesso dominio
+  const deviceKey = "trk_device_id_v1";
+
+  function uuid() {
+    if (crypto?.randomUUID) return crypto.randomUUID();
+    return "xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx".replace(/[xy]/g, c => {
+      const r = (Math.random() * 16) | 0, v = c === "x" ? r : (r & 0x3) | 0x8;
+      return v.toString(16);
+    });
+  }
+
+  const deviceId = localStorage.getItem(deviceKey) || (localStorage.setItem(deviceKey, uuid()), localStorage.getItem(deviceKey));
+  const sessionId = uuid();
+
+  const deviceInfo = {
+    ua: navigator.userAgent,
+    lang: navigator.language,
+    tz: Intl.DateTimeFormat().resolvedOptions().timeZone,
+    screen: `${screen.width}x${screen.height}`,
+    platform: navigator.platform || "",
+  };
+
+  async function post(payload) {
+    try {
+      await fetch(ENDPOINT, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload),
+        keepalive: true
+      });
+    } catch {}
+  }
+
+  const now = () => Date.now();
+
+  post({ type: "start", sessionId, deviceId, deviceInfo, page: location.pathname, ts: now() });
+
+  let beatTimer = null;
+  function startBeats() {
+    if (beatTimer) return;
+    beatTimer = setInterval(() => {
+      if (document.visibilityState === "visible") {
+        post({ type: "beat", sessionId, deviceId, ts: now() });
+      }
+    }, 10000); // ogni 10s
+  }
+  function stopBeats() {
+    if (!beatTimer) return;
+    clearInterval(beatTimer);
+    beatTimer = null;
+  }
+
+  document.addEventListener("visibilitychange", () => {
+    if (document.visibilityState === "visible") startBeats();
+    else stopBeats();
+  });
+
+  window.addEventListener("pagehide", () => post({ type: "end", sessionId, deviceId, ts: now(), reason: "pagehide" }));
+  window.addEventListener("beforeunload", () => post({ type: "end", sessionId, deviceId, ts: now(), reason: "unload" }));
+
+  startBeats();
+})();
+</script>
